# project

./: .gitignore  curls.txt  main.py  requirements.txt
app/: pyproject.toml  requirements.txt
app/app/: main.py
app/app/core/: auth.py  sql.py
app/app/routers/: auth.py  curd.py  login.py  otp_signup.py  s3.py
